# trpkit

./: .env.example  .gitignore  .lighthouserc.json  .prettierignore  .prettierrc.js  CHANGELOG.md  README.md  biome.json  docker-compose.yml  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.mjs  tsconfig.json  turbo.json  vitest.config.mts
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  labeler.yml  lighthouse.yml  publish.yml  semgrep.yml
apps/accounts.trpkit.com/: .eslintrc.json  next.config.js  package.json  tailwind.config.js
apps/api/: .env.example  Dockerfile  package.json
apps/api.trpkit.com/: .env.example  package.json  tsconfig.json
apps/cms.trpkit.net/: .env.example  .eslintrc.json  keystatic.config.ts  next.config.js  package.json
apps/ingress/: Cargo.toml
apps/ingress.trpkit.com/: package.json  tsconfig.json
apps/marketing/: .env.example  Dockerfile  contentlayer.config.ts  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/mta-sts.trpkit.com/: next.config.js  package.json
apps/trpkit.com/: .env.example  .eslintrc.json  (+8 more)
apps/url-shortener/: Cargo.toml  Dockerfile
apps/url-shortener/src/: main.rs
autogenerated/: README.md
scripts/: bump-version.js  bump-version.sh  clone-opaque-wasm.js  clone-trpkit-materials.js  generate-assets.sh  generate-materials.sh  generate-opaque.js  generate-opaque.sh  generate-trpkit-opaque.sh
(+250 files in other folders)
