[package]
name = "ingress"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
dotenv = "0.15.0"
mongodb = { version = "2.2.2", default-features = false, features = ["async-std-runtime"] }
serde = "1.0.139"

[profile.release]
opt-level = "z"